# restrip

./: .gitignore  README.md  fetch.py  pyproject.toml
config/: .secrets-example.toml  burgerking.toml  hellofresh.toml  kptncook.toml  mcdonalds.toml
