[tool.poetry]
name = "restrip"
version = "0.1.0"
description = "Minimal REST API Ripper"
authors = ["Martin <martin@dul.li>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
jq = "^1.2.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
isort = "^5.10.1"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
